REOPENED164130
MediaEndpoint::generateDtlsInfo is not needed
https://bugs.webkit.org/show_bug.cgi?id=164130
Summary MediaEndpoint::generateDtlsInfo is not needed
youenn fablet
Reported 2016-10-28 07:34:41 PDT
It could be done when creating the MediaEndpoint if needed.
Attachments
Patch (3.44 KB, patch)
2016-10-28 07:38 PDT, youenn fablet
no flags
Patch (7.15 KB, patch)
2016-10-28 08:06 PDT, youenn fablet
no flags
Patch (7.16 KB, patch)
2016-10-28 08:14 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2016-10-28 07:38:22 PDT
youenn fablet
Comment 2 2016-10-28 08:06:42 PDT
youenn fablet
Comment 3 2016-10-28 08:14:20 PDT
WebKit Commit Bot
Comment 4 2016-10-29 06:45:59 PDT
Comment on attachment 293162 [details] Patch Clearing flags on attachment: 293162 Committed r208100: <http://trac.webkit.org/changeset/208100>
WebKit Commit Bot
Comment 5 2016-10-29 06:46:03 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 6 2016-11-01 09:47:34 PDT
Reverted r208100 for reason: This change caused LayoutTest crashes under GuardMalloc. Committed r208223: <http://trac.webkit.org/changeset/208223>
Ryan Haddad
Comment 7 2016-11-01 09:48:15 PDT
Note You need to log in before you can comment on or make changes to this bug.