MediaEndpoint::generateDtlsInfo is not needed https://bugs.webkit.org/show_bug.cgi?id=164130

Patch by Youenn Fablet <youenn@apple.com> on 2016-10-29
Reviewed by Eric Carlson.

No change of behavior.

Removing MediaEndpoint::generateDtlsInfo as it can be called directly from createMediaEndpointOwr.

* Modules/mediastream/MediaEndpointPeerConnection.cpp:
(WebCore::MediaEndpointPeerConnection::MediaEndpointPeerConnection):
* platform/mediastream/MediaEndpoint.cpp:
* platform/mediastream/MediaEndpoint.h:
* platform/mediastream/openwebrtc/MediaEndpointOwr.cpp:
(WebCore::createMediaEndpointOwr):
* platform/mediastream/openwebrtc/MediaEndpointOwr.h:
* platform/mock/MockMediaEndpoint.cpp:
(WebCore::MockMediaEndpoint::MockMediaEndpoint):
(WebCore::MockMediaEndpoint::generateDtlsInfo): Deleted.
* platform/mock/MockMediaEndpoint.h:

Canonical link: https://commits.webkit.org/181882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208100 268f45cc-cd09-0410-ab3c-d52691b4dbfc